<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="254dp"
            android:layout_height="53dp"
            android:text="@string/app_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="48dp" android:id="@+id/appTitle" android:textAlignment="center"/>
    <Button
            android:text="@string/currencies_menu_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/currenciesButton"
            app:layout_constraintTop_toBottomOf="@+id/appTitle"
            android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/gold_menu_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/goldButton"
            app:layout_constraintTop_toBottomOf="@+id/currenciesButton"
            android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/exchange_calculator_menu_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/exchangeCalculatorButton"
            app:layout_constraintTop_toBottomOf="@+id/goldButton"
            android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
    />

</androidx.constraintlayout.widget.ConstraintLayout>